[package]
name = "twitch-server"
version = "0.1.0"
authors = ["damody <t1238142000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-cors = "0.1"
bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

mysql = "16.1"

failure = "0.1"
failure_derive = "0.1"
